--- a/.github/workflows/checklist.yml
+++ b/.github/workflows/checklist.yml
@@ -2,6 +2,9 @@ name: Require Checklist
 on:
   pull_request: 
     types: [opened]
+    branches:    
+      - main
+      - 'staging'
 
 jobs:
   comment:
