--- a/api-playground/json/data/esign/CreateSigRequestconfig.json
+++ b/api-playground/json/data/esign/CreateSigRequestconfig.json
@@ -1,24 +1,27 @@
 {
-    "parameters": {
-        "header": [
-            {
-                "x-client-id": "5937fdc8-b234-469b-b6ad-03af68b4bdf3"
-            },
-            {
-                "x-client-secret": "3cb7b277-44f9-4ab7-ac98-8df0ad7e41d1"
-            }
-        ]
-    },
-    "body": {
-        "documentId": "{{document_id}}",
-        "redirectUrl": "http://setu.co",
-        "configId": "7965d8d7-98a5-4ae8-9748-ced05449b6e7",
-        "signers": [
-            {
-                "identifier": "7042484922",
-                "displayName": "Rahul Roy",
-                "signerNo": 1
-            }
-        ]
-    }
+  "parameters": {
+    "header": [
+      {
+        "x-client-id": "cdd36f9a-467a-423d-8fd0-474999426cd2"
+      },
+      {
+        "x-client-secret": "mcxnncpIzlXjcPt7hzu2jwhc1gxEW5NK"
+      },
+      {
+        "x-product-instance-id": "d957af7b-7271-4a2b-aa7e-4fc45e63581e"
+      }
+    ]
+  },
+  "body": {
+    "documentId": "{{document_id}}",
+    "redirectUrl": "http://setu.co",
+    "configId": "7965d8d7-98a5-4ae8-9748-ced05449b6e7",
+    "signers": [
+      {
+        "identifier": "7042484922",
+        "displayName": "Rahul Roy",
+        "signerNo": 1
+      }
+    ]
+  }
 }
